--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <meta charset="utf-8">
 <title> K ū ʻ O K O ʻ A </title>
-<style type="text/css">html,body{background:white;color:black;width:100%;height:100%;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}section{width:100%;}</style>
+<style type="text/css">html,body{background:white;color:#999;width:100%;height:100%;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;font-family:helvetica,arial,sans-serif;font-size:x-large;font-weight:100;}section{width:100%;}a{color:black;text-decoration:none; margin:0 1em;}p{padding:1em;line-height:1.6;}</style>
 <section align="center">
-  <a href="https://github.com/kuokoa" title="KUOKOA STUDIO">
-  <svg xmlns="http://www.w3.org/2000/svg" width="80%" height="80%" viewBox="0 0 250 300" style="opacity:.05;">
+  <svg xmlns="http://www.w3.org/2000/svg" width="50%" height="50%" viewBox="0 0 250 300" style="opacity:.05;">
     <g id="kuokoa" transform="translate(5, 5)" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <circle id="mahina" stroke="#000" stroke-width="5" cx="120" cy="80" r="80"></circle>
         <polygon id="moku" fill="#000" fill-rule="nonzero" points="119.998 80 200 190 40 190"></polygon>
@@ -12,4 +11,5 @@
     </g>
   </svg>
   </a>
+  <p><a href="https://github.com/kuokoa">work</a> • <a href="http://kuokoa.life">life</a> • <a href="http://kuokoa.press">press</a></p>
 </section>
