--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <meta charset="utf-8">
-<title> K ū ʻ O K O ʻ A </title>
-<style type="text/css">html,body{background:white;color:#efefef;width:100%;height:100%;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;font-family:helvetica,arial,sans-serif;font-size:5vw;font-weight:100;}section{width:100%;}a{color:black;text-decoration:none; margin:0 1em;}p{padding:1rem;margin:0;line-height:1.6;}</style>
-<section align="center">
-  <svg xmlns="http://www.w3.org/2000/svg" width="50%" height="50%" viewBox="0 0 250 300">
-    <g id="kuokoa" transform="translate(5, 5)" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-        <circle id="mahina" stroke="#efefef" stroke-width="5" cx="120" cy="80" r="80"></circle>
-        <polygon id="moku" fill="#efefef" fill-rule="nonzero" points="119.998 80 200 190 40 190"></polygon>
-        <polyline id="wai" stroke="#efefef" stroke-width="5" transform="translate(120, 229.802733) rotate(-180) translate(-120, -229.802733) " points="240 209.999999 200 249.605468 160 209.999999 120 249.605468 80 209.999999 40 247.605468 0 209.999999"></polyline>
-        <polyline id="kai" stroke="#efefef" stroke-width="5" transform="translate(120, 269.802733) rotate(-180) translate(-120, -269.802733) " points="240 249.999999 200 289.605468 160 249.999999 119.777344 287.605468 80 249.999999 40 289.605468 0 249.999999"></polyline>
-    </g>
-  </svg>
-  </a>
-  <p><a href="https://github.com/kuokoa">work</a> • <a href="http://kuokoa.life">life</a> • <a href="http://kuokoa.press">press</a></p>
+<title>Kuokoa Studio</title>
+<style type="text/css">html,body{background:white;color:#ddd;width:100%;height:100%;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;font-family:'filson-pro', -apple-system, 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;font-size:4vw;font-weight:400;}section{width:100%;display:flex;flex-direction:column;justify-content:center;align-items:center;}a{color:#fff;text-decoration:none; margin:0 1em;}p{padding:16px;margin:0;line-height:1.6;}h1{font-size:4vw;margin: 16px auto;font-weight:400;color:#fff}aside{height:70vh;display:flex;justify-content:center;align-items:center;}header,footer{display:flex;justify-content:center;align-items:center;height:calc(15vh - 32px);text-align:center;background:black;color:#222;padding:16px;width:100%;}</style>
+<link rel="stylesheet" href="https://use.typekit.net/nay3kif.css">
+<section>
+  <header>
+    <p><a href="https://github.com/kuokoa">work</a> ⟁ <a href="http://kuokoa.life">shop</a> ⟁ <a href="http://kuokoa.press">press</a></p>
+
+  </header>
+  <aside title="KŪʻOKOʻA • Kuokoa Studio">
+    <svg xmlns="http://www.w3.org/2000/svg" width="50%" height="50%" viewBox="0 0 250 300">
+      <g id="kuokoa" transform="translate(5, 5)" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+          <circle id="mahina" stroke="#000" stroke-width="5" cx="120" cy="80" r="80"></circle>
+          <polygon id="moku" fill="#000" fill-rule="nonzero" points="119.998 80 200 190 40 190"></polygon>
+          <polyline id="wai" stroke="#000" stroke-width="5" transform="translate(120, 229.802733) rotate(-180) translate(-120, -229.802733) " points="240 209.999999 200 249.605468 160 209.999999 120 249.605468 80 209.999999 40 247.605468 0 209.999999"></polyline>
+          <polyline id="kai" stroke="#000" stroke-width="5" transform="translate(120, 269.802733) rotate(-180) translate(-120, -269.802733) " points="240 249.999999 200 289.605468 160 249.999999 119.777344 287.605468 80 249.999999 40 289.605468 0 249.999999"></polyline>
+      </g>
+    </svg>
+  </aside>
+  <footer>
+    <h1>aloha @ kuokoa.studio</h1>
+  </footer>
 </section>
