--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <title>Kuokoa Studio</title>
 <style type="text/css">html,body{background:white;color:#ddd;width:100%;height:100%;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;font-family:'filson-pro', -apple-system, 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;font-size:4vw;font-weight:400;}section{width:100%;display:flex;flex-direction:column;justify-content:center;align-items:center;}a{color:#fff;text-decoration:none; margin:0 1em;}p{padding:16px;margin:0;line-height:1.6;}h1{font-size:4vw;margin: 16px auto;font-weight:400;color:#fff}aside{height:70vh;width:100vw;display:flex;justify-content:center;align-items:center;}header,footer{display:flex;justify-content:center;align-items:center;height:calc(15vh - 32px);text-align:center;background:black;color:#222;padding:16px;width:100%;}</style>
 <link rel="stylesheet" href="https://use.typekit.net/nay3kif.css">
+<link rel="shortcut icon" type="image/png" href="http://kuokoa.studio/kuokoa.svg"/>
 <section>
   <header>
     <p><a href="https://github.com/kuokoa">work</a> ⟁ <a href="http://kuokoa.life">shop</a> ⟁ <a href="http://kuokoa.press">press</a></p>
