--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         font-weight:400;
       }
       section{
-        width:100%;
+        min-height:100vh;
+        width:100vw;
         display:flex;
         flex-direction:column;
         justify-content:center;
