--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <title>Kuokoa Studio</title>
     <style type="text/css">
       html,body{
+        margin:0;
+        padding:0;
         background:black;
         color:#ddd;
-        width:100%;
-        height:100%;
-        margin: 0;
-        padding: 0;
+        width:100vw;
+        min-height:100vh;
         display:flex;
         align-items:center;
         justify-content:center;
