--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Industrial Design and Development">
     <link rel="stylesheet" href="https://use.typekit.net/nay3kif.css">
     <link rel="shortcut icon" type="image/png" href="http://kuokoa.studio/kuokoa.svg"/>
-    <title>Kuokoa Studio</title>
+    <title>KUOKOA STUDIO</title>
     <style type="text/css">
       html,body{
         margin:0;
@@ -20,7 +20,7 @@
         align-items:center;
         justify-content:center;
         font-family:'filson-pro', -apple-system, 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-        font-size:18px;
+        font-size:16px;
         font-weight:400;
       }
       section{
@@ -51,7 +51,7 @@
   <body>
 <section>
   <header>
-    <p><a href="https://github.com/kuokoa">work</a> ⟁ <a href="http://kuokoa.life">shop</a> ⟁ <a href="http://kuokoa.press">press</a></p>
+    <p><a href="https://github.com/kuokoa">WORK</a> ⟁ <a href="http://kuokoa.life">SHOP</a> ⟁ <a href="http://kuokoa.press">PRESS</a></p>
 
   </header>
   <aside title="KŪʻOKOʻA • Kuokoa Studio">
@@ -65,7 +65,7 @@
     </svg>
   </aside>
   <footer>
-    <h1>aloha @ kuokoa.studio</h1>
+    <h1>ALOHA @ KUOKOA.STUDIO</h1>
   </footer>
 </section>
 </body>
