--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
         padding:1rem;
         width: calc(100vw - 2rem);
       }
+      footer span {
+        color: #222;
+        padding: 0 .35em;
+      }
     </style>
   </head>
   <body>
@@ -65,7 +69,7 @@
     </svg>
   </aside>
   <footer>
-    <h1>ALOHA @ KUOKOA.STUDIO</h1>
+    <h1><a href="mailto:aloha@kuokoa.studio?subject=howzit?">ALOHA<span>@</span>KUOKOA.STUDIO</a></h1>
   </footer>
 </section>
 </body>
