--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>KUOKOA</title>
+  <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="description" content="Industrial software and hardware design and development consulting services; research, design and development of virtual and physical technologies; manufacturing, logistics, wholesale and retail sales and fulfillment; publishing imprint of books and other printed and internet media.">
@@ -15,7 +16,7 @@
     <h1><img src="kuokoa.svg" alt="KUOKOA" /></h1>
     <menu>
       <a href="https://kuokoa.life" class="trade" title="Shop">Kālepa</a>
-      <a href="mailto:aloha@kuokoa.studio?subject='Aloha.'" class="contact" title="Contact">Aloha</a>
+      <a href="mailto:aloha@kuokoa.studio?subject=Aloha." class="contact" title="Contact">Aloha</a>
     </menu>
   </header>
   <article>
