updated graphics and minor text changes

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     </header>
     <aside class="tagline">
       <aside></aside>
-      <p><span>An elevated talent with a relentless passion for creation and experimentation in virtual and physical worlds.</span></p>
+      <p><span>A design and development powerhouse driven by an elevated talent with a relentless passion for creation and experimentation in virtual and physical worlds.</span></p>
     </aside>
     <article>
       <section class="branches">
         <section class="branch design">
           <section class="content">
             <h2><span>Kuokoa</span> Design</h2>
-            <p>Industrial software and hardware design and development consulting.</p>
+            <p>Industrial software and hardware design and development consulting services.</p>
             <ul class="clients" title="Collaborators">
               <li><a href="https://eventfarm.com">Event Farm</a></li>
               <li><a href="https://otherness.studio">Otherness Studio</a></li>
@@ -37,6 +37,7 @@
             </ul>
           </section>
         </section>
+        <img class="aside desktop" src="desktop.jpg" />
         <section class="branch studio">
           <section class="content">
             <h2><span>Kuokoa</span> Studio</h2>
@@ -58,6 +59,7 @@
             </ul>
           </section>
         </section>
+        <img class="aside table" src="table.jpg" />
         <section class="branch press">
           <section class="content">
             <h2><span>Kuokoa</span> Press</h2>
@@ -78,6 +80,7 @@
         <section class="content">
           <img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Flag_of_Hawaii.svg" title="Ua Mau ke Ea o ka ʻĀina i ka Pono" />
           <p>Koʻolau  &nbsp; Oʻahu  &nbsp; Hawaiʻi</p>
+
           <p>&copy; 2017-2019 &nbsp; Kuokoa, LLC</p>
         </section>
       </aside>
