--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     </header>
     <aside class="tagline">
       <aside></aside>
-      <p><span>A design and development powerhouse driven by an elevated talent with a relentless passion for creation and experimentation in virtual and physical worlds.</span></p>
+      <p><span>A tropically flavored technological design and development powerhouse driven by an elevated talent with a relentless passion for creation and experimentation in virtual and physical worlds.</span></p>
     </aside>
     <article>
       <section class="branches">
         <section class="branch design">
           <section class="content">
             <h2><span>Kuokoa</span> Design</h2>
-            <p>Industrial software and hardware design and development consulting services.</p>
+            <p>Industrial software and hardware design and development consulting.</p>
             <ul class="clients" title="Collaborators">
               <li><a href="https://eventfarm.com">Event Farm</a></li>
               <li><a href="https://otherness.studio">Otherness Studio</a></li>
