--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="description" content="Industrial software and hardware design and development consulting services; research, design and development of virtual and physical technologies; manufacturing, logistics, wholesale and retail sales and fulfillment; publishing imprint of books and other printed and internet media.">
+  <meta name="description" content="Industrial software and hardware design and development consulting services; full stack web development; research, design and development of virtual and physical technologies; manufacturing, logistics, wholesale and retail sales and fulfillment; publishing imprint of books and other printed and internet media.">
+  <meta property="og:title" content="Kuokoa Studio" />
+  <meta property="og:image" content="https://kuokoa.studio/desktop.jpg" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
   <link rel="stylesheet" href="https://use.typekit.net/was4fvo.css">
   <link rel="stylesheet" href="styles/beta.css" />
-  <link rel="shortcut icon" type="image/png" href="https://kuokoa.studio/kii.svg">
+  <link rel="shortcut icon" type="image/png" href="https://kuokoa.studio/kii.png">
+  <link rel="apple-touch-icon" href="https://kuokoa.studio/kii.png">
 </head>
 <body>
   <section class="root">
