--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <section class="branch press">
           <section class="content">
             <h2><span>Kuokoa</span> Press</h2>
-            <p>Publishing imprint of books, other printed and internet media.</p>
+            <p>Publishing imprint of books, other printed, digital and mixed media.</p>
             <ul class="books" title="Books">
               <li><a href="https://foodvib.es">Food Vibes</a></li>
               <li>As Far Back As I Can Remember</li>
